# Application-driven-development-based-on-IMX6ULL

./: 100ask_imx6ull-14x14.dts  CMakeLists.txt  README.md
driver/: Makefile  at24c02_drv.c  dht11_drv.c  hs0038_drv.c  sg90_drv.c  sr04_drv.c
include/: page_manager.h  ui.h
page/: At24c02_page.c  DHT11_page.c  Sg90_page.c  Sr04_page.c  album_page.c  camera_page.c  main_page.c  page_manager.c
sys/: main.c
test/: at24c02_test.c  dht11_test.c  sg90_test.c  sr04_test.c
ui/: lv_conf.h  lv_drv_conf.h  ui.c
